...
        en: 'Orders',
        ar: 'الطلبات',
      ),
      (
        icon: CupertinoIcons.creditcard,
        selectedIcon: CupertinoIcons.creditcard_fill,
        en: 'Wallet',
        ar: 'المحفظة',
      ),
      (
        icon: CupertinoIcons.bell,
        selectedIcon: CupertinoIcons.bell_fill,
        en: 'Inbox',
...
